--- a/vignettes/Walk-through.Rmd
+++ b/vignettes/Walk-through.Rmd
@@ -72,12 +72,12 @@ In their simplest forms, `plot_bar_v` and `plot_bar_h` plot the relative frequen
 ```{r}
 plot_bar_v(w5, item = w5_q11, textsize = 11)
 ```
- 
+
 There is a corresponding argument in the function for the share of "Don't know" responses (`dk_share`). For the labels, you can use the underlying `ggplot2` structure of the functions by simply adding further layers (in this case, `scale_x_discrete` to add labels). **NB: When using the horizontal bar plots (with one or two variables), you have to reverse the order of your manual labels to display them correctly!!** With further optional arguments, the bars' colour or the relative frequencies' position can be changed, among other things.
 
 ```{r}
 plot_bar_h(w5, item = w5_q11) +
-    scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
+  scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
 ```
 
 ### *plot_groupbar_v* / *plot_groupbar_h*
@@ -91,7 +91,7 @@ You can select the palette of your choice by either saving it as an object or di
 ```{r}
 plot_groupbar_v(w5, item = w5_q11, by = w5_q2, lang = "EN",
                 labels = c("Female", "Male"), values = sep_palette("Standard")) +
- scale_x_discrete(labels = c("Item One", "Item Two", "Item Three", "Item Four", "Item Five"))
+  scale_x_discrete(labels = c("Item One", "Item Two", "Item Three", "Item Four", "Item Five"))
 ```
 
 **Again, note that with the horizontal plots, you have to change reverse the order of the manual labels to display them correctly!**
@@ -99,7 +99,7 @@ plot_groupbar_v(w5, item = w5_q11, by = w5_q2, lang = "EN",
 ```{r}
 plot_groupbar_h(w5, item = w5_q11, by = w5_q2, 
                 labels = c("Female", "Male"), values = sep_palette("Darkblues")) +
- scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
+  scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
 ```
 
 The barposition of both groupbar functions can be changed from its default "dodge" to e.g. "stack":
@@ -107,12 +107,12 @@ The barposition of both groupbar functions can be changed from its default "dodg
 ```{r}
 plot_groupbar_v(w5, item = w5_q11, by = w5_q2, lang = "EN", barposition = "stack",
                 labels = c("Female", "Male"), values = sep_palette("Standard")) +
- scale_x_discrete(labels = c("Item One", "Item Two", "Item Three", "Item Four", "Item Five"))
+  scale_x_discrete(labels = c("Item One", "Item Two", "Item Three", "Item Four", "Item Five"))
 ```
 
 ### *plot_multiple_h*
 
-The plot function `plot_multiple_h` depicts several items from the same question in one plot. Unlike the previous plots, `plot_multiple_h` and `plot_rank_v` demand that you **define the item labels (`item_labels`) and the question text (`question`) beforehand.** The argument `item` takes as input a vector of variables.
+The plot function `plot_multiple_h` depicts several items from the same question in one plot. The argument `item` takes as input a vector of variables.
 
 ```{r}
 item_labels <- c("When shopping, I choose products\nwith an environmental label.", "I use fabric shopping bags\nseveral times (at least 20 times).", "I buy drugstore items and\ncleaning products in refill packs.", 
@@ -120,18 +120,22 @@ item_labels <- c("When shopping, I choose products\nwith an environmental label.
 question <- "In the following, we are concerned with your personal behaviour when buying and\nusing products and services. Please indicate how often you undertake these actions."
 
 plot_multiple_h(w8, item = paste0("w8_q6x", 1:4), barwidth = 0.5, lang = "EN",
+                item_labels = item_labels, question = question,
                 values = sep_palettes$BluePink,
                 labels = c("Never", "Rarely", "Occasionally", "Often", "Always"))
 ```
 
+If you do not specify `item_labels` or `question` within the function call, the function will look whether this information is available in the global environment. Technically, you thus do not necessarily need to specify it in the function itself, as long as you define it beforehand. However, it is recommended to specify it within the function to avoid mistakes. If `question` is specified neither in the function call nor in the global environment, no question is printed. If `item_labels` is specified neither in the function call nor in the global environment, an error is returned.
+
 The plot can also distinct by grouping variable and/or treatment variable. In order to achieve this, the argument `by` and/or `treat` must be defined.
 
 ```{r fig.height=7}
-item_labels <- c("Ich wähle beim Einkaufen Produkte\nmit Umweltdeklaration.", "Ich verwende Einkaufstüten oder -taschen\naus Stoff mehrfach (min. 20 Mal).", 
-                 "Ich kaufe Drogerie-Artikel und Putzmittel\nin Nachfüllpackungen.", "Ich schaue Filme im Streaming oder lade sie aus\ndem Internet herunter, anstatt die DVD zu kaufen.")
-question <- "Im Folgenden geht es um Ihr persönliches Verhalten bei Kauf und Nutzung\nvon Produkten und Dienstleistungen. Bitte geben Sie an, wie häufig Sie diese Handlungen ausführen."
+items <- c("Ich wähle beim Einkaufen Produkte\nmit Umweltdeklaration.", "Ich verwende Einkaufstüten oder -taschen\naus Stoff mehrfach (min. 20 Mal).", 
+           "Ich kaufe Drogerie-Artikel und Putzmittel\nin Nachfüllpackungen.", "Ich schaue Filme im Streaming oder lade sie aus\ndem Internet herunter, anstatt die DVD zu kaufen.")
+q <- "Im Folgenden geht es um Ihr persönliches Verhalten bei Kauf und Nutzung\nvon Produkten und Dienstleistungen. Bitte geben Sie an, wie häufig Sie diese Handlungen ausführen."
 
 plot_multiple_h(w8, item = paste0("w8_q6x", 1:4), by = rurality,
+                item_labels = items, question = q,
                 values = sep_palettes$BluePink,
                 labels = c("Nie", "Selten", "Gelegentlich", "Oft", "Sehr Oft")) +
   theme(axis.text.y = element_text(lineheight = 0.8)) #decrease spacing between item label lines
@@ -141,26 +145,28 @@ Moreover, arguments determining barwidth, size of percentage text as well as per
 
 ### *plot_rank_v*
 
-As the name implies, this plot functions visualizes rankings. **Again, `item_labels` and `question` must be specified beforehand.** The argument `n.items` sets the number of items per rank. By default, all items are shown. If the argument is set to fewer items (example below: 4 items), the most prominent items for each rank are visualized. The items are ordered according to their order in rank 1, with the most-often picked choice at the bottom.
+As the name implies, this plot functions visualizes rankings. The argument `n.items` sets the number of items per rank. By default, all items are shown. If the argument is set to fewer items (example below: 4 items), the most prominent items for each rank are visualized. The items are ordered according to their order in rank 1, with the most-often picked choice at the bottom. As with `plot_multiple_h`, the function takes the information on `item_labels` and `question` from the global environment if it is not specified within the function call; but it is recommended to specify the information within the function call.
 
 ```{r}
-item_labels <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
-                 "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
-question <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
+items <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
+           "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
+q <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
 
 plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), n.items = 4,
+            item_labels = items, question = q,
             values = sep_palette("Standard"))
 ```
 
 Beyond `n.items`, the same arguments can be set for this plot function as for `plot_multiple_h`. It can also distinct by grouping and/or treatment variable.
 
 ```{r}
-item_labels <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
-                 "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
-question <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
+items <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
+           "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
+q <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
 
 plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), textsize = 7,
             by = gender, treat = w8_treat_repair,
+            item_labels = items, question = q,
             values = c(sep_palettes$Lightblues[1:4], rev(sep_palettes$Greens[1:3]))) +
   theme(panel.spacing.y = unit(0.3, "cm")) #increase space between facet rows
 ```
